<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/detail_prefix"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.todak.playground.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_letterListFragment"
            app:destination="@+id/letterListFragment"/>
        <action
            android:id="@+id/action_homeFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_homeFragment_to_startFragment"
            app:destination="@id/startFragment" />
        <action
            android:id="@+id/action_homeFragment_to_expandTextFragment"
            app:destination="@id/expandTextFragment" />
    </fragment>
    <fragment
        android:id="@+id/letterListFragment"
        android:name="com.todak.playground.ui.word.LetterListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_letter_list">
        <action
            android:id="@+id/action_letterListFragment_to_wordListFragment"
            app:destination="@id/wordListFragment" />
    </fragment>
    <fragment
        android:id="@+id/wordListFragment"
        android:name="com.todak.playground.ui.word.WordListFragment"
        android:label="@string/word_list_fragment_label"
        tools:layout="@layout/fragment_word_list">
        <argument
            android:name="letter"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.todak.playground.ui.game.GameFragment"
        android:label="GameFragment" />
    <fragment
        android:id="@+id/startFragment"
        android:name="com.todak.playground.ui.cupcake.StartFragment"
        android:label="@string/start_title" >
        <action
            android:id="@+id/action_startFragment_to_flavorFragment"
            app:destination="@id/flavorFragment" />
    </fragment>
    <fragment
        android:id="@+id/flavorFragment"
        android:name="com.todak.playground.ui.cupcake.FlavorFragment"
        android:label="@string/choose_flavor" >
        <action
            android:id="@+id/action_flavorFragment_to_pickupFragment"
            app:destination="@id/pickupFragment" />
    </fragment>
    <fragment
        android:id="@+id/pickupFragment"
        android:name="com.todak.playground.ui.cupcake.PickupFragment"
        android:label="@string/choose_pickup_date" >
        <action
            android:id="@+id/action_pickupFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.todak.playground.ui.cupcake.SummaryFragment"
        android:label="@string/order_summary" />
    <fragment
        android:id="@+id/expandTextFragment"
        android:name="com.todak.playground.ui.expandtext.ExpandTextFragment"
        android:label="fragment_expand_text"
        tools:layout="@layout/fragment_expand_text" />
</navigation>